# fast-fatoora

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  api.py  main.py  pyfatoora.py  pyproject.toml  requirements.txt
.github/workflows/: checks.yaml
app/: main.py
app/api/api_v1/: api.py
app/pyfatoora/: __init__.py  pyfatoora.py  schemas.py
app/tests/: test_api.py
app/utils/: helpers.py
pyfatoora/: __init__.py  api.py  info.py  pyfatoora.py  schemas.py
templates/: fatoora.html  index.html
tests/: test_api.py
